--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Daily Life Ultra IA</title>
+
 <style>
 *{box-sizing:border-box;margin:0;padding:0;font-family:system-ui;}
 body{
@@ -116,6 +117,10 @@ button:hover{background:#0ea5e9}
   color:black;
   margin-left:auto;
 }
+.iaMsg{
+  background:#22c55e;
+  color:black;
+}
 
 /* IA INPUT BAR */
 #iaInputArea{
@@ -142,67 +147,55 @@ button:hover{background:#0ea5e9}
   width:46px;
   height:46px;
   border-radius:50%;
-  background:#f97316; /* 100% roux */
+  background:#38bdf8;
   display:flex;
   align-items:center;
   justify-content:center;
   font-size:18px;
   cursor:pointer;
   color:black;
-  transition:.2s;
 }
-.iconBtn:hover{background:#fb923c}
+.iconBtn:hover{background:#0ea5e9}
 
-/* VOICE OVERLAY CIRCLE */
+#fileInput{display:none}
+
+/* CENTRÉ VOIX STYLE CHATGPT */
 #voiceOverlay{
   display:none;
   position:fixed;
-  top:50%; left:50%;
+  top:50%;
+  left:50%;
   transform:translate(-50%,-50%);
-  width:140px;
-  height:140px;
+  width:180px;
+  height:180px;
   border-radius:50%;
   background:#f97316;
   display:flex;
+  flex-direction:column;
   align-items:center;
   justify-content:center;
-  animation: pulse 1.2s infinite;
-  z-index:1000;
-  color:black;
-  font-size:28px;
-  box-shadow:0 0 20px #fb923c;
-  flex-direction:column;
-}
-#voiceOverlay button{
-  margin:2px;
-  width:40px; height:40px;
-  border-radius:50%;
-  border:none;
-  background:#fb923c;
-  color:black;
-  font-weight:bold;
-  cursor:pointer;
-  font-size:14px;
-}
-#voiceOverlay button:hover{
-  background:#f87171;
+  color:white;
+  font-weight:700;
+  text-align:center;
+  z-index:9999;
+  box-shadow:0 0 20px rgba(0,0,0,0.5);
+  animation:pulse 1s infinite alternate;
 }
 @keyframes pulse{
   0%{transform:translate(-50%,-50%) scale(1);}
-  50%{transform:translate(-50%,-50%) scale(1.1);}
-  100%{transform:translate(-50%,-50%) scale(1);}
+  100%{transform:translate(-50%,-50%) scale(1.05);}
 }
-
-/* FOOTER */
-footer{
-  margin-top:auto;
-  padding:8px 14px;
-  font-size:12px;
-  text-align:right;
-  opacity:.7;
+#voiceButtons{display:flex;gap:6px;margin-top:10px;}
+.voiceBtn{
+  padding:6px 10px;
+  border-radius:14px;
+  background:rgba(255,255,255,0.3);
+  cursor:pointer;
 }
+.voiceBtn.active{background:white;color:#f97316;}
 </style>
 </head>
+
 <body>
 
 <header>
@@ -229,6 +222,7 @@ footer{
       <option value="#ec4899">Rose</option>
     </select>
   </div>
+
   <div class="card">
     <h3>🌍 Langue</h3>
     <select>
@@ -238,6 +232,7 @@ footer{
       <option>Allemand</option>
     </select>
   </div>
+
   <div class="card">
     <h3>✅ Tâches</h3>
     <input id="taskInput" placeholder="Nouvelle tâche">
@@ -249,22 +244,23 @@ footer{
 <!-- IA -->
 <div id="ia" class="page">
   <div id="chatContainer"></div>
+
   <div id="iaInputArea">
     <div class="iconBtn" onclick="fileInput.click()">+</div>
     <input id="iaInput" placeholder="Écris un message…">
-    <div class="iconBtn" id="voiceBtn" onclick="startVoice()">🎤</div>
-    <div class="iconBtn" onclick="sendText()">⬆</div>
+    <div class="iconBtn" onclick="startVoice()">🎤</div>
+    <div class="iconBtn" onclick="askIA()">⬆</div>
     <input type="file" id="fileInput" accept="image/*">
   </div>
 </div>
 
-<!-- VOICE OVERLAY -->
+<!-- CENTRÉ VOIX -->
 <div id="voiceOverlay">
-  🎙️
-  <div>
-    <button onclick="setVoice('male')">♂</button>
-    <button onclick="setVoice('female')">♀</button>
-    <button onclick="setVoice('chatgpt')">GPT</button>
+  <div>Parle maintenant...</div>
+  <div id="voiceButtons">
+    <div class="voiceBtn active" data-voice="femme">Femme</div>
+    <div class="voiceBtn" data-voice="homme">Homme</div>
+    <div class="voiceBtn" data-voice="chatgpt">ChatGPT</div>
   </div>
 </div>
 
@@ -309,7 +305,11 @@ let tasks=JSON.parse(localStorage.getItem("tasks")||"[]");
 function renderTasks(){
   taskList.innerHTML="";
   tasks.forEach((t,i)=>{
-    taskList.innerHTML=`<div class="task"><span>${t}</span><span class="trash" onclick="delTask(${i})">🗑️</span></div>`+taskList.innerHTML;
+    taskList.innerHTML+=`
+      <div class="task">
+        <span>${t}</span>
+        <span class="trash" onclick="delTask(${i})">🗑️</span>
+      </div>`;
   });
 }
 function addTask(){
@@ -326,79 +326,77 @@ function delTask(i){
 }
 renderTasks();
 
-// VOICE SETTINGS
-let selectedVoice = 'female';
-function setVoice(v){ selectedVoice=v; }
+// VOIX
+let selectedVoice = 'femme';
+document.querySelectorAll('.voiceBtn').forEach(btn=>{
+  btn.onclick = ()=>{
+    document.querySelectorAll('.voiceBtn').forEach(b=>b.classList.remove('active'));
+    btn.classList.add('active');
+    selectedVoice = btn.dataset.voice;
+  }
+});
 
-// SEND TEXT
-function sendText(){
-  const text = iaInput.value.trim();
-  if(!text) return;
-  chatContainer.innerHTML += `<div class="message userMsg">${text}</div>`;
-  iaInput.value = "";
-  const reply = generateAIReply(text);
-  speakWithOverlay(reply);
+// IA TEXTE → VOIX
+function askIA(){
+  const q = iaInput.value.trim();
+  if(!q) return;
+  iaInput.value = '';
+  speak(simulateAIResponse(q));
 }
 
-// VOICE
+// IA VOIX → VOIX
 let recognition;
 function startVoice(){
-  const overlay = document.getElementById("voiceOverlay");
-  overlay.style.display="flex";
+  if(recognition) return;
   const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
   if(!SpeechRecognition){alert("Vocal non supporté"); return;}
-
   recognition = new SpeechRecognition();
-  recognition.lang="fr-FR";
+  recognition.lang='fr-FR';
+  recognition.continuous=true;
   recognition.start();
 
-  recognition.onresult = e => {
-    const text = e.results[0][0].transcript;
-    chatContainer.innerHTML += `<div class="message userMsg">${text}</div>`;
-    const reply = generateAIReply(text);
-    speakWithOverlay(reply);
+  // Affiche overlay
+  const overlay = document.getElementById('voiceOverlay');
+  overlay.style.display='flex';
+
+  recognition.onresult=e=>{
+    const text = e.results[e.results.length-1][0].transcript;
+    const reply = simulateAIResponse(text);
+    speak(reply);
   };
 
-  recognition.onend = () => {
-    overlay.style.display="none";
-  };
+  recognition.onend = ()=>{
+    overlay.style.display='none';
+    recognition=null;
+  }
 }
 
-// IA RESPONSE SIMULATION
-function generateAIReply(q){
+// SIMULATION IA
+function simulateAIResponse(q){
   if(q.toLowerCase().includes("h")) return "Salut ! Comment ça va ?";
   if(q.toLowerCase().includes("bonjour")) return "Bonjour ! Je suis là pour t'aider.";
-  if(q.toLowerCase().includes("comment")) return "Je vais très bien, merci !";
-  return "Voici ma réponse en voix !";
+  if(q.toLowerCase().includes("comment")) return "Je vais très bien, merci de demander !";
+  return "Voici ma réponse à haute voix !";
 }
 
-// SPEAK + ANIMATION OVERLAY
-function speakWithOverlay(text){
-  const overlay = document.getElementById("voiceOverlay");
-  overlay.style.display="flex";
+// SPEAK
+function speak(text){
+  const u = new SpeechSynthesisUtterance(text);
+  u.lang='fr-FR';
+  const voices = speechSynthesis.getVoices();
 
-  let voices = speechSynthesis.getVoices();
-  let voice;
+  if(selectedVoice==='femme'){
+    const v = voices.find(v=>v.lang.includes('FR') && v.name.toLowerCase().includes('female'));
+    if(v) u.voice = v;
+  } else if(selectedVoice==='homme'){
+    const v = voices.find(v=>v.lang.includes('FR') && v.name.toLowerCase().includes('male'));
+    if(v) u.voice = v;
+  } else if(selectedVoice==='chatgpt'){
+    const v = voices.find(v=>v.lang.includes('FR'));
+    if(v) u.voice=v;
+  }
 
-  if(selectedVoice==='male') voice = voices.find(v=>v.name.toLowerCase().includes('male')) || voices[0];
-  else if(selectedVoice==='female') voice = voices.find(v=>v.name.toLowerCase().includes('female')) || voices[0];
-  else voice = voices[0]; // chatgpt style default
-
-  const utter = new SpeechSynthesisUtterance(text);
-  utter.lang="fr-FR";
-  utter.voice = voice;
-
-  utter.onstart = ()=>{
-    overlay.style.background="#22c55e";
-    overlay.style.boxShadow="0 0 30px #22c55e";
-  };
-  utter.onend = ()=>{
-    overlay.style.background="#f97316";
-    overlay.style.boxShadow="0 0 20px #fb923c";
-    overlay.style.display="none";
-  };
-
-  speechSynthesis.speak(utter);
+  speechSynthesis.speak(u);
 }
 
 // IMAGE
@@ -407,15 +405,21 @@ fileInput.onchange=e=>{
   if(!file) return;
   const reader=new FileReader();
   reader.onload=ev=>{
-    chatContainer.innerHTML+=`<div class="message userMsg"><img src="${ev.target.result}" style="max-width:100%;border-radius:12px"></div>`;
+    chatContainer.innerHTML+=`
+      <div class="message userMsg">
+        <img src="${ev.target.result}" style="max-width:100%;border-radius:12px">
+      </div>`;
   };
   reader.readAsDataURL(file);
 }
 
 // PROMO
 function validatePromo(){
-  promoResult.textContent = promoInput.value==="PROMO2026" ? "Code valide" : "Code invalide";
+  promoResult.textContent =
+    promoInput.value==="PROMO2026"
+    ? "Code valide"
+    : "Code invalide";
 }
 </script>
 </body>
-  </html>
+                        </html>
